:sparkles: Add 404,500エラー画面実装

--- a/public/404.html
+++ b/public/404.html
@@ -63,5 +63,9 @@
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
+  <div class="error">
+    <img src="/404error.png">
+    <p>お探しのページは見つかりません。</p>
+  </div>
 </body>
 </html>
