--- a/public/500.html
+++ b/public/500.html
@@ -62,5 +62,9 @@
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
+  <div class="error">
+    <img src="/500.png">
+    <p>Internal Server Error</p>
+  </div>
 </body>
 </html>
